Bug fix - team member extra padding on bottom page removal

--- a/themes/gv_sky/css/sass/team-member.sass
+++ b/themes/gv_sky/css/sass/team-member.sass
@@ -258,4 +258,4 @@
 
 .blog-posts-load
 	+load-more
-	padding-bottom: 70px
+	// padding-bottom: 70px
